# ai-arch-toolkit

./: CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/: uv-guide.md
examples/: 01_hello_world.py  02_multi_turn_conversation.py  03_streaming.py  04_structured_output.py  05_tool_calling.py  06_tool_registry.py  07_thinking.py  08_multimodal.py  09_server_tools.py  10_react_agent.py  11_plan_execute_agent.py  12_tree_of_thoughts_agent.py  13_self_discovery_agent.py  14_async_client.py  README.md
research/: graph_algorithms_overview.md  llm_agent_architectures.md  llm_api_complete_guide_2026.md  modern_python_2015_16.md  networkx_guide.md  python_best_practices.md
src/ai_arch_toolkit/: __init__.py
src/ai_arch_toolkit/agents/: __init__.py  _base.py  _compiler.py  _lats.py  _parsing.py  _plan_execute.py  _react.py  _reflexion.py  _rewoo.py  _self_discovery.py  _tot.py
src/ai_arch_toolkit/llm/: __init__.py  _async_batch.py  _async_client.py  _async_http.py  _batch.py  _client.py  _exceptions.py  _http.py  _types.py
src/ai_arch_toolkit/tools/: __init__.py  _decorator.py  _registry.py
tests/: conftest.py
tests/agents/: test_compiler.py  test_integration.py  test_lats.py  test_parsing.py  test_plan_execute.py  test_react.py  test_reflexion.py  test_rewoo.py  test_self_discovery.py  test_tot.py
tests/llm/: test_async_batch.py  test_async_client.py  test_async_http.py  test_batch.py  test_client.py  test_http.py  test_types.py
tests/llm/test_providers/: test_anthropic.py  test_gemini.py  test_openai_compat.py  (+2 more)
tests/tools/: test_registry.py
(+7 files in other folders)
