[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-arch-toolkit"
version = "0.1.0"
description = "Lightweight unified LLM client for OpenAI, Anthropic, xAI, Gemini, Mistral, and Groq"
requires-python = ">=3.12"
license = "MIT"
dependencies = ["requests>=2.31", "httpx>=0.27"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.9", "pytest-cov>=6.0", "pytest-asyncio>=0.24"]

[tool.ruff]
target-version = "py312"
line-length = 99
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
